<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/container"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <!--android:background="@drawable/preloader_bg"-->
    <!--android:scaleY="0.5"-->
    <!--android:scaleX="0.5"-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MapsActivity"/>

            <include
                android:id="@+id/current_speed_widget"
                layout="@layout/speed_widget"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <include
                android:id="@+id/speed_limit_widget"
                layout="@layout/speed_widget"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/current_speed_widget"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/speed_limit_widget"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="TextView"/>

            <TextView
                android:id="@+id/txt_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/txt_long"
                app:layout_constraintStart_toStartOf="@+id/txt_long"
                tools:text="TextView"/>

            <TextView
                android:id="@+id/txt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:background="@drawable/location_label_bg"
                android:gravity="end"
                android:maxWidth="200dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Davao Regulated Speed"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_recent_speed"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="invisible"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/btn_my_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="@color/colorPrimaryLight"
                app:srcCompat="@drawable/ic_history_black"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_sound_on"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="invisible"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/btn_recent_speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="@color/colorPrimaryLight"
                app:srcCompat="@drawable/ic_volume_up"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_my_location"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:visibility="visible"
                app:backgroundTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_my_location"/>

            <TextView
                android:id="@+id/txt_network_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/max_speed"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/waiting_for_network"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/map"/>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/fade_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@android:color/black"
            android:layerType="hardware"
            android:visibility="visible"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cont_pre_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/updating_your_location"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/preloader"
                app:layout_constraintStart_toStartOf="@+id/preloader"
                app:layout_constraintTop_toBottomOf="@+id/preloader"/>

            <ImageView
                android:id="@+id/preloader"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/dslg_preloader"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
